tests/test121.rael
if 1 {
    blame
}